@@ -4,6 +4,7 @@ Amarok ChangeLog
 
 VERSION 2.6
   CHANGES:
+    * Increase minimal required ffmpeg version up to 0.7.
     * Use audio-x-generic icon for bit rate, not a generic one. (BR 302753)
     * Add Amarok.Playlist.playMediaList() script bindings for API symmetry.
     * Building the spectrum analyzer applet can now be disabled with a CMake
